# sound-forge

./: README.md  pyproject.toml
.github/skills/analyze-audio/: SKILL.md
.github/skills/convert-audio/: SKILL.md
.github/skills/gen-music/: SKILL.md
.github/skills/gen-sfx/: SKILL.md
.github/skills/loop-music/: SKILL.md
.github/skills/trim-audio/: SKILL.md
.github/workflows/: ci.yml
tools/: analyze_audio.py  convert_audio.py  gen_music.py  gen_sfx.py  loop_music.py  trim_audio.py
tools/lib/: audio_utils.py  console.py  model_utils.py
