[project]
name = "sound-forge"
version = "0.1.0"
description = "AI-powered toolkit for generating game audio assets from sound sources."
authors = [
    { name = "Pantazis Deligiannis", email = "pdeligia@me.com" },
]
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[cli]>=1.7.2",
    "pyloudnorm>=0.1.1",
    "rich>=14.0.0",
    "soundfile>=0.13.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.45.0",
]

[project.scripts]
gen-music = "tools.gen_music:main"
loop-music = "tools.loop_music:main"
trim-audio = "tools.trim_audio:main"
convert-audio = "tools.convert_audio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
