[project]
name = "sound-forge"
version = "0.1.0"
description = "AI-powered toolkit for generating game audio assets from sound sources."
authors = [
    { name = "Pantazis Deligiannis", email = "pdeligia@me.com" },
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.20.0",
    "diffusers>=0.37.1",
    "huggingface-hub[cli]>=0.30.0",
    "pyloudnorm>=0.1.1",
    "rich>=14.0.0",
    "soundfile>=0.13.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.5",
    "transformers>=4.57.6,<5.0.0",
]

[project.scripts]
analyze-audio = "tools.analyze_audio:main"
convert-audio = "tools.convert_audio:main"
gen-music = "tools.gen_music:main"
gen-sfx = "tools.gen_sfx:main"
loop-music = "tools.loop_music:main"
trim-audio = "tools.trim_audio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
